Fixed some bugs. and malache is now available for application server.

--- a/sites/test/index.htm
+++ b/sites/test/index.htm
@@ -5,8 +5,11 @@
     <link href="xx.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
+    <a href="/interface.ajs">Interface Testing</a>
     <form action="upload.ajs?id=1&pwd=sldfjsldkjf" method="post" enctype="multipart/form-data">
         <input type="text" name="YYY" />
+        <input type="text" name="arr" />
+        <input type="text" name="arr" />
         <input type="file" name="abc" />
         <input type="file" name="xyz" />
         <br />
