--- a/sites/test/upload.htm
+++ b/sites/test/upload.htm
@@ -1,9 +1,9 @@
-<%=chunk%><br />
-<%=abc%>
+<%-chunk%><br />
+<%-abc%>
 <br />
-<%=path%>
+<%-path%>
 <br />
 <% include index.htm %>
 <br />
-<%=ck%>
-<%=imgs%>
+<%-ck%>
+<%-imgs%>
